chore: Update docs

--- a/docs/man/man1/jx-gitops-kpt-update.1
+++ b/docs/man/man1/jx-gitops-kpt-update.1
@@ -64,8 +64,8 @@ If you know a specific directory which needs updating you can always use 'kpt' d
     filter on the Kptfile repository name  for which packages to update
 
 .PP
-\fB\-s\fP, \fB\-\-strategy\fP="alpha\-git\-patch"
-    the 'kpt' strategy to use. To see available strategies type 'kpt pkg update \-\-help'. Typical values are: resource\-merge, fast\-forward, alpha\-git\-patch, force\-delete\-replace
+\fB\-s\fP, \fB\-\-strategy\fP="resource\-merge"
+    the 'kpt' strategy to use. To see available strategies type 'kpt pkg update \-\-help'. Typical values are: resource\-merge, fast\-forward, force\-delete\-replace
 
 .PP
 \fB\-u\fP, \fB\-\-url\fP=""
