--- a/docs/man/man1/jx-gitops-webhook-delete.1
+++ b/docs/man/man1/jx-gitops-webhook-delete.1
@@ -28,7 +28,7 @@ Deletes the webhooks for all the source repositories optionally filtering by own
     Runs in batch mode without prompting for user input
 
 .PP
-\fB\-\-dry\-run\fP[=true]
+\fB\-\-dry\-run\fP[=false]
     If enabled doesn't actually delete any webhooks, just tells you what it will delete
 
 .PP
