--- a/docs/man/man1/jx-gitops-webhook-update.1
+++ b/docs/man/man1/jx-gitops-webhook-update.1
@@ -32,6 +32,10 @@ Updates the webhooks for all the source repositories optionally filtering by own
     Whether to exactly match the hook based on the URL
 
 .PP
+\fB\-\-fast\fP[=false]
+    If annotation webhook.jenkins\-x.io is true on SourceConfig don't check with git provider
+
+.PP
 \fB\-\-git\-kind\fP=""
     the kind of git server to connect to
 
