--- a/docs/man/man1/jx-gitops-upgrade.1
+++ b/docs/man/man1/jx-gitops-upgrade.1
@@ -72,8 +72,8 @@ Upgrades the GitOps git repository with the latest configuration and versions th
     filter on the Kptfile repository name  for which packages to update
 
 .PP
-\fB\-s\fP, \fB\-\-strategy\fP="alpha\-git\-patch"
-    the 'kpt' strategy to use. To see available strategies type 'kpt pkg update \-\-help'. Typical values are: resource\-merge, fast\-forward, alpha\-git\-patch, force\-delete\-replace
+\fB\-s\fP, \fB\-\-strategy\fP="resource\-merge"
+    the 'kpt' strategy to use. To see available strategies type 'kpt pkg update \-\-help'. Typical values are: resource\-merge, fast\-forward, force\-delete\-replace
 
 .PP
 \fB\-u\fP, \fB\-\-url\fP=""
