--- a/docs/man/man1/jx-gitops-label.1
+++ b/docs/man/man1/jx-gitops-label.1
@@ -45,6 +45,10 @@ Updates all kubernetes resources in the given directory tree to add/override the
 \fB\-\-selector\fP=[]
     adds Kubernetes label selector to filter on, e.g. \-s app=pusher\-wave,heritage=Helm
 
+.PP
+\fB\-\-selector\-target\fP=""
+    sets which path in the Kubernetes resources to select on instead of metadata.labels.
+
 
 .SH EXAMPLE
 .PP
