--- a/docs/man/man1/jx-gitops-repository-resolve.1
+++ b/docs/man/man1/jx-gitops-repository-resolve.1
@@ -46,6 +46,10 @@ Resolves the git repository URL for the cluster/environment
     adds Kubernetes label selector to filter on, e.g. \-s app=pusher\-wave,heritage=Helm
 
 .PP
+\fB\-\-selector\-target\fP=""
+    sets which path in the Kubernetes resources to select on instead of metadata.labels.
+
+.PP
 \fB\-s\fP, \fB\-\-source\-dir\fP="."
     the directory to recursively look for the *.yaml or *.yml source Environment/SourceRepository files
 
