--- a/docs/man/man1/jx-gitops-annotate.1
+++ b/docs/man/man1/jx-gitops-annotate.1
@@ -43,11 +43,15 @@ Annotates all kubernetes resources in the given directory tree
 
 .PP
 \fB\-p\fP, \fB\-\-pod\-spec\fP[=false]
-    annotate the PodSpec in spec.templates.metadata.annotations rather than the top level annotations
+    annotate the PodSpec in spec.template.metadata.annotations rather than the top level annotations
 
 .PP
 \fB\-\-selector\fP=[]
     adds Kubernetes label selector to filter on, e.g. \-s app=pusher\-wave,heritage=Helm
+
+.PP
+\fB\-\-selector\-target\fP=""
+    sets which path in the Kubernetes resources to select on instead of metadata.labels.
 
 
 .SH EXAMPLE
