--- a/docs/man/man1/jx-gitops-helmfile-move.1
+++ b/docs/man/man1/jx-gitops-helmfile-move.1
@@ -66,6 +66,10 @@ If supplied with \-\-dir\-includes\-release\-name then by default we will annota
 \fB\-\-selector\fP=[]
     adds Kubernetes label selector to filter on, e.g. \-s app=pusher\-wave,heritage=Helm
 
+.PP
+\fB\-\-selector\-target\fP=""
+    sets which path in the Kubernetes resources to select on instead of metadata.labels.
+
 
 .SH EXAMPLE
 .PP
