--- a/docs/man/man1/jx-gitops-sa-secret.1
+++ b/docs/man/man1/jx-gitops-sa-secret.1
@@ -49,6 +49,10 @@ Adds one or more secrets to the given ServiceAccount files
 \fB\-\-selector\fP=[]
     adds Kubernetes label selector to filter on, e.g. \-s app=pusher\-wave,heritage=Helm
 
+.PP
+\fB\-\-selector\-target\fP=""
+    sets which path in the Kubernetes resources to select on instead of metadata.labels.
+
 
 .SH EXAMPLE
 .PP
