--- a/docs/man/man1/jx-gitops-annotate.1
+++ b/docs/man/man1/jx-gitops-annotate.1
@@ -42,8 +42,12 @@ Annotates all kubernetes resources in the given directory tree
 \[la]https://github.com/jenkins-x/jx-helpers/v3/tree/master/docs/kind_filters.md\[ra]
 
 .PP
+\fB\-\-overwrite\fP[=true]
+    Set to false to not overwrite any existing value
+
+.PP
 \fB\-p\fP, \fB\-\-pod\-spec\fP[=false]
-    annotate the PodSpec in spec.template.metadata.annotations rather than the top level annotations
+    annotate the PodSpec in spec.template.metadata.annotations (or spec.jobTemplate.spec.template.metadata.annotations for CronJobs) rather than the top level annotations
 
 .PP
 \fB\-\-selector\fP=[]
@@ -57,9 +61,11 @@ Annotates all kubernetes resources in the given directory tree
 .SH EXAMPLE
 .PP
 # updates recursively annotates all resources in the current directory
-  jx\-gitops annotate myannotate=cheese another=thing
+  jx\-gitops annotate myannotation=cheese another=thing
   # updates recursively all resources
   jx\-gitops annotate \-\-dir myresource\-dir foo=bar
+  # remove annotations
+  jx\-gitops annotate myannotate\- another\-
 
 
 .SH SEE ALSO
