chore: regen docs

--- a/docs/man/man1/jx-gitops-variables.1
+++ b/docs/man/man1/jx-gitops-variables.1
@@ -20,6 +20,10 @@ Lazily creates a .jx/variables.sh script with common pipeline environment variab
 
 .SH OPTIONS
 .PP
+\fB\-\-app\fP=""
+    Name of the app or repository
+
+.PP
 \fB\-\-build\-number\fP=""
     the build number to use. If not specified defaults to $BUILD\_NUMBER
 
