--- a/docs/man/man1/jx-gitops-kpt-update.1
+++ b/docs/man/man1/jx-gitops-kpt-update.1
@@ -40,6 +40,10 @@ If you know a specific directory which needs updating you can always use 'kpt' d
     the 'kpt' binary name to use. If not specified this command will download the jx binary plugin into \~/.jx3/plugins/bin and use that
 
 .PP
+\fB\-c\fP, \fB\-\-container\-tool\fP="docker"
+    the underlying container tool for kpt to use
+
+.PP
 \fB\-\-dir\fP="."
     the directory to recursively look for the *.yaml or *.yml files
 
