--- a/docs/man/man1/jx-gitops-pr-comment.1
+++ b/docs/man/man1/jx-gitops-pr-comment.1
@@ -59,6 +59,10 @@ Adds a comment to the current pull request
 \fB\-\-source\-url\fP=""
     the git source URL of the repository
 
+.PP
+\fB\-s\fP, \fB\-\-strategy\fP="create"
+    comment strategy to choose (create, create\-if\-not\-exists, delete\-and\-create)
+
 
 .SH EXAMPLE
 .PP
