--- a/docs/man/man1/jx-gitops-upgrade.1
+++ b/docs/man/man1/jx-gitops-upgrade.1
@@ -36,6 +36,10 @@ Upgrades the GitOps git repository with the latest configuration and versions th
     the git commit message used
 
 .PP
+\fB\-c\fP, \fB\-\-container\-tool\fP="docker"
+    the underlying container tool for kpt to use
+
+.PP
 \fB\-\-dir\fP="."
     the directory to recursively look for the *.yaml or *.yml files
 
