docs: make docs

--- a/docs/man/man1/jx-gitops-git-clone.1
+++ b/docs/man/man1/jx-gitops-git-clone.1
@@ -18,7 +18,7 @@ jx\-gitops\-git\-clone \- Clones the cluster git repository using the URL, git u
 Clones the cluster git repository from the URL provided to the jx\-git\-operator watching the said repository, and authenticating as git user with token provided by jx\-boot secret, also provided by jx\-git\-operator installation.
 
 .PP
-Effectively this command runs jx gitops git setup before proceeding to simply clone the repository into either the folder passed in via \-\-clone\-dir or into the ./setup directory.
+Effectively this command runs jx gitops git setup before proceeding to simply clone the repository into either the folder passed in via \-\-clone\-dir or into the ./source directory.
 
 
 .SH OPTIONS
