--- a/docs/man/man1/jx-gitops-label.1
+++ b/docs/man/man1/jx-gitops-label.1
@@ -51,7 +51,7 @@ Labels all kubernetes resources in the given directory tree
 
 .PP
 \fB\-\-selector\fP=[]
-    adds Kubernetes label selector to filter on, e.g. \-s app=pusher\-wave,heritage=Helm
+    adds Kubernetes label selector to filter on, e.g. \-\-selector app=pusher\-wave,heritage=Helm
 
 .PP
 \fB\-\-selector\-target\fP=""
