--- a/docs/man/man1/jx-gitops-pr-comment.1
+++ b/docs/man/man1/jx-gitops-pr-comment.1
@@ -32,6 +32,10 @@ Adds a comment to the current pull request
     the directory to search for the .git to discover the git source URL
 
 .PP
+\fB\-f\fP, \fB\-\-file\fP=""
+    add content of file as comment
+
+.PP
 \fB\-\-git\-kind\fP=""
     the kind of git server to connect to
 
