--- a/docs/man/man1/jx-gitops-repository-add.1
+++ b/docs/man/man1/jx-gitops-repository-add.1
@@ -63,7 +63,7 @@ Add one or more repositories to the SourceConfig
 
 .PP
 \fB\-\-selector\fP=[]
-    adds Kubernetes label selector to filter on, e.g. \-s app=pusher\-wave,heritage=Helm
+    adds Kubernetes label selector to filter on, e.g. \-\-selector app=pusher\-wave,heritage=Helm
 
 .PP
 \fB\-\-selector\-target\fP=""
