--- a/docs/man/man1/jx-gitops-repository-export.1
+++ b/docs/man/man1/jx-gitops-repository-export.1
@@ -55,7 +55,7 @@ jx\-gitops\-repository\-export \- Exports the 'source\-config.yaml' file from th
 
 .PP
 \fB\-\-selector\fP=[]
-    adds Kubernetes label selector to filter on, e.g. \-s app=pusher\-wave,heritage=Helm
+    adds Kubernetes label selector to filter on, e.g. \-\-selector app=pusher\-wave,heritage=Helm
 
 .PP
 \fB\-\-selector\-target\fP=""
