--- a/docs/man/man1/jx-gitops-sa-secret.1
+++ b/docs/man/man1/jx-gitops-sa-secret.1
@@ -47,7 +47,7 @@ Adds one or more secrets to the given ServiceAccount files
 
 .PP
 \fB\-\-selector\fP=[]
-    adds Kubernetes label selector to filter on, e.g. \-s app=pusher\-wave,heritage=Helm
+    adds Kubernetes label selector to filter on, e.g. \-\-selector app=pusher\-wave,heritage=Helm
 
 .PP
 \fB\-\-selector\-target\fP=""
