--- a/docs/man/man1/jx-gitops-helmfile-move.1
+++ b/docs/man/man1/jx-gitops-helmfile-move.1
@@ -64,7 +64,7 @@ If supplied with \-\-dir\-includes\-release\-name then by default we will annota
 
 .PP
 \fB\-\-selector\fP=[]
-    adds Kubernetes label selector to filter on, e.g. \-s app=pusher\-wave,heritage=Helm
+    adds Kubernetes label selector to filter on, e.g. \-\-selector app=pusher\-wave,heritage=Helm
 
 .PP
 \fB\-\-selector\-target\fP=""
