--- a/docs/man/man1/jx-gitops-helmfile-status.1
+++ b/docs/man/man1/jx-gitops-helmfile-status.1
@@ -15,7 +15,10 @@ jx\-gitops\-helmfile\-status \- Updates the git deployment status after a releas
 
 .SH DESCRIPTION
 .PP
-Updates the git deployment status after a release
+Updates the git deployment status after a release.
+
+.PP
+By default the version of the release prefixed with v will be used as the git reference. This can be overridden by the annotation gitReference in the Chart.yaml file of the helm chart.
 
 
 .SH OPTIONS
