--- a/docs/man/man1/jx-gitops-image.1
+++ b/docs/man/man1/jx-gitops-image.1
@@ -51,7 +51,7 @@ Updates images in the kubernetes resources from the version stream
 
 .PP
 \fB\-\-selector\fP=[]
-    adds Kubernetes label selector to filter on, e.g. \-s app=pusher\-wave,heritage=Helm
+    adds Kubernetes label selector to filter on, e.g. \-\-selector app=pusher\-wave,heritage=Helm
 
 .PP
 \fB\-\-selector\-target\fP=""
