--- a/docs/man/man1/jx-gitops-namespace.1
+++ b/docs/man/man1/jx-gitops-namespace.1
@@ -55,7 +55,7 @@ Updates all kubernetes resources in the given directory to the given namespace
 
 .PP
 \fB\-\-selector\fP=[]
-    adds Kubernetes label selector to filter on, e.g. \-s app=pusher\-wave,heritage=Helm
+    adds Kubernetes label selector to filter on, e.g. \-\-selector app=pusher\-wave,heritage=Helm
 
 .PP
 \fB\-\-selector\-target\fP=""
