--- a/docs/man/man1/jx-gitops-repository-create.1
+++ b/docs/man/man1/jx-gitops-repository-create.1
@@ -47,7 +47,7 @@ Creates any missing SourceRepository resources
 
 .PP
 \fB\-\-selector\fP=[]
-    adds Kubernetes label selector to filter on, e.g. \-s app=pusher\-wave,heritage=Helm
+    adds Kubernetes label selector to filter on, e.g. \-\-selector app=pusher\-wave,heritage=Helm
 
 .PP
 \fB\-\-selector\-target\fP=""
