--- a/docs/man/man1/jx-gitops-repository-resolve.1
+++ b/docs/man/man1/jx-gitops-repository-resolve.1
@@ -43,7 +43,7 @@ Resolves the git repository URL for the cluster/environment
 
 .PP
 \fB\-\-selector\fP=[]
-    adds Kubernetes label selector to filter on, e.g. \-s app=pusher\-wave,heritage=Helm
+    adds Kubernetes label selector to filter on, e.g. \-\-selector app=pusher\-wave,heritage=Helm
 
 .PP
 \fB\-\-selector\-target\fP=""
