--- a/docs/man/man1/jx-gitops-plugin-upgrade.1
+++ b/docs/man/man1/jx-gitops-plugin-upgrade.1
@@ -31,7 +31,7 @@ Upgrades the binary plugins for this plugin
 .SH EXAMPLE
 .PP
 # upgrades your plugin binaries for gitops
-  jx\-gitops plugins upgrade
+  jx\-gitops plugin upgrade
 
 
 .SH SEE ALSO
