--- a/docs/man/man1/jx-gitops-helmfile-validate.1
+++ b/docs/man/man1/jx-gitops-helmfile-validate.1
@@ -35,7 +35,7 @@ Parses a helmfile and any nested helmfiles and validates they conform to a canon
 .SH EXAMPLE
 .PP
 # Validates helmfile.yaml within the current directory
-  jx\-gitops helmfile validate%!(EXTRA string=jx\-gitops)
+  jx\-gitops helmfile validate
 
 
 .SH SEE ALSO
