--- a/docs/man/man1/jx-gitops-repository-export.1
+++ b/docs/man/man1/jx-gitops-repository-export.1
@@ -65,7 +65,7 @@ jx\-gitops\-repository\-export \- Exports the 'source\-config.yaml' file from th
 .SH EXAMPLE
 .PP
 # creates/populates the .jx/gitops/source\-config.yaml file with any SourceRepository resources in the current cluster
-  jx\-gitops repository export%!(EXTRA string=jx\-gitops)
+  jx\-gitops repository export
 
 
 .SH SEE ALSO
