--- a/docs/man/man1/jx-gitops-sa-secret.1
+++ b/docs/man/man1/jx-gitops-sa-secret.1
@@ -57,7 +57,7 @@ Adds one or more secrets to the given ServiceAccount files
 .SH EXAMPLE
 .PP
 # ensures that the given service account resource has the secret associated
-  jx\-gitops sa secret \-f config\-root/namespaces/jx/mychart/my\-sa.yaml \-\-secret my\-secret\-name%!(EXTRA string=jx\-gitops)
+  jx\-gitops sa secret \-f config\-root/namespaces/jx/mychart/my\-sa.yaml \-\-secret my\-secret\-name
 
 
 .SH SEE ALSO
