--- a/docs/man/man1/jx-gitops-yset.1
+++ b/docs/man/man1/jx-gitops-yset.1
@@ -39,15 +39,15 @@ Modifies one or more yaml files using a path expression while preserving comment
 .SH EXAMPLE
 .PP
 # sets the foo.bar=abc in the files *.yaml
-  jx gitops yset \-\-path foo.bar \-\-value abc *.yaml
+  jx\-gitops yset \-\-path foo.bar \-\-value abc *.yaml
 
 .PP
 # sets the foo.bar=abc in the file foo.yaml
-  jx gitops yset \-\-path foo.bar \-\-value abc \-\-file foo.yaml
+  jx\-gitops yset \-\-path foo.bar \-\-value abc \-\-file foo.yaml
 
 .PP
 # sets the foo.bar=abc in the file foo.yaml and bar.yaml
-  jx gitops yset \-\-path foo.bar \-\-value abc \-\-file bar.yaml \-\-file foo.yaml%!(EXTRA string=jx\-gitops, string=jx\-gitops)
+  jx\-gitops \-\-path foo.bar \-\-value abc \-\-file bar.yaml \-\-file foo.yaml
 
 
 .SH SEE ALSO
